fix javascript, style overflow

--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ body {
 .purpose-wrapper {
   padding: 0 1em 1.5em 1em;
   flex: 1;
-  overflow-y: auto;
+  overflow: auto;
   margin-top: 2em;
 }
 
@@ -404,6 +404,7 @@ body {
     border-radius: 10px 10px 0 0;
     position: fixed;
     bottom: env(safe-area-inset-bottom, 0);
+    padding: 1rem;
   }
 
   .banner-buttons-wrapper {
@@ -456,6 +457,7 @@ body {
   .purposes-banner-text,
   .service-title {
     font-size: 0.75em;
+    line-height: 1.6;
   }
 
   .purpose-details > summary,
@@ -473,11 +475,13 @@ body {
   }
 
   .purposes-banner-text-wrapper {
-    margin: 0 0.5em;
+    margin: 0 1em 0 0;
+    padding: 0 0 1em;
   }
 
   .purpose-wrapper {
-    padding: 0 1em 1.5em 0.5em;
+    padding: 0 1em 1.5em 0;
+    margin-top: 1.5em;
   }
 
   .purpose-content {
